--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sha1 = "0.10.6"
-zed_extension_api = "0.7.0"
+zed_extension_api = { path = "../zed-fork/crates/extension_api" }
